# tool_wewrite

./: .dockerignore  README.md  SKILL.md  config.example.yaml  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: build-openclaw.yml  checks.yml
references/: anti-ai-writing-system.md  pipeline-state.md
scripts/: build_codex.py  build_openclaw.py  context_budget.py
skills/wewrite/: SKILL.md
skills/wewrite-learn/: SKILL.md
skills/wewrite-learn/references/: learn-edits.md
skills/wewrite-publish/: SKILL.md
skills/wewrite-review/: SKILL.md
skills/wewrite-rewrite/: SKILL.md
skills/wewrite-rewrite/references/: multiplatform-rewrite.md
skills/wewrite-stats/: SKILL.md
skills/wewrite-style/: SKILL.md  style.example.yaml
skills/wewrite-style/references/: onboard.md
skills/wewrite-topic/: SKILL.md
skills/wewrite-topic/references/: topic-selection.md
skills/wewrite-visual/: SKILL.md
skills/wewrite-visual/references/: visual-guide.md  visual-prompts.md
skills/wewrite-write/: SKILL.md
skills/wewrite-write/personas/: cold-analyst.yaml  humor-storyteller.yaml  industry-observer.yaml  midnight-friend.yaml  sharp-journalist.yaml  tech-coder.yaml  warm-editor.yaml
skills/wewrite-write/references/: anti-ai-writing-system.md  (+6 more)
src/wewrite/: __init__.py  cli.py  history.py  paths.py  runs.py  sources.py
tests/: test_context_budget.py  test_converter.py  test_readme_sync.py  test_skill_contracts.py  test_workflow_contracts.py
web/: DEPLOY.md  QUICKSTART.md  README.md
web/backend/: .env.example  requirements.txt
(+49 files in other folders)
